[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wolai-obsidian-exporter"
version = "0.1.0"
description = "Export Wolai pages and local assets into an Obsidian-friendly folder."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "kk" }]
keywords = ["wolai", "obsidian", "markdown", "exporter", "knowledge-base"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.0",
  "python-dotenv>=1.0",
  "rich>=13.0",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "respx>=0.21",
  "ruff>=0.6",
  "mypy>=1.10",
]

[project.scripts]
wolai-obsidian-export = "wolai_obsidian_exporter.cli:app"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
